--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
     "rxjs": "~6.6.0",
